--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -409,6 +409,9 @@ input:focus {
             &.card-head-title-bd-blue {
                 border-color: #0268D6
             }
+            &.card-head-title-bd-green {
+                border-color: #5DA904;
+            }
         }
         .card-head-small-title {
             display: inline-block;
