--- a/src/style/variable.scss
+++ b/src/style/variable.scss
@@ -8,6 +8,8 @@ $bg-default:#FFFFFF;;
 $btn-primary:#FE0655;
 $btn-default:#FFFFFF;
 $btn-disabled:#C0C0C0;
+$btn-golden:#FDE728;
+$btn-green:#5DA904;
 
 //文字颜色
 $text-white:#FFFFFF;
